# sequencer

./: .gitignore  AGENTS.md  AUTHORS  Cargo.toml  README.md  TODO.md  justfile
.github/workflows/: ci.yml
app-core/: Cargo.toml
app-core/src/: l2_tx.rs  lib.rs  user_op.rs
app-core/src/application/: method.rs  mod.rs  wallet.rs
benchmarks/: BENCHMARK_SPEC.md  Cargo.toml  README.md  justfile
benchmarks/src/: lib.rs  runtime.rs
canonical-app/: Cargo.toml
canonical-app/src/: main.rs
sdk/ts-client/: actions.ts  client.ts  config.ts  eip712.ts  openapi.yaml  utils.ts
sdk/ts-client/frontend/: README.md  index.html  package.json
sdk/ts-client/frontend/src/: main.tsx  styles.css
sdk/ts-client/frontend/src/api/: client.ts  types.ts
sdk/ts-client/frontend/src/app/: Shell.tsx  routes.tsx
sdk/ts-client/frontend/src/components/: CopyButton.tsx  DebugControls.tsx  EnvelopeBuilder.tsx  GrantPanel.tsx  PendingList.tsx  SessionKeyPanel.tsx  WalletBar.tsx  WindowDetail.tsx  WsEventList.tsx
sdk/ts-client/frontend/src/components/envelopeBuilder/: actionSection.tsx  nonce.ts  sessionModeSection.tsx  sessionValidation.ts  types.ts
sdk/ts-client/frontend/src/eip712/: builders.ts  types.ts
sdk/ts-client/frontend/src/hooks/: useDerivedSessionAccount.ts  useGrantPersistence.ts
sdk/ts-client/frontend/src/pages/: MonitorPage.tsx  TxSenderPage.tsx  WsFeedPage.tsx
sdk/ts-client/frontend/src/state/: sequencerUrl.tsx  txSender.tsx
sdk/ts-client/frontend/src/utils/: json.ts
sequencer/: Cargo.toml
sequencer/src/: application.rs  l2_tx.rs  lib.rs  main.rs  user_op.rs
sequencer/src/api/: error.rs  mod.rs
sequencer/src/inclusion_lane/: error.rs  lane.rs  mod.rs  profiling.rs  types.rs
sequencer/src/input_reader/: mod.rs  reader.rs
sequencer/src/l2_tx_broadcaster/: mod.rs  profiling.rs
sequencer/src/storage/: db.rs  mod.rs  sql.rs
sequencer/src/storage/migrations/: 0001_schema.sql  0002_views.sql  0003_input_reader_state.sql  0004_direct_inputs_block_number.sql
sequencer/src/storage/queries/: insert_sequenced_direct_input.sql  insert_sequenced_user_op.sql  insert_user_op.sql  select_latest_batch_with_user_op_count.sql  select_latest_frame_in_batch_for_batch.sql  select_ordered_l2_txs_from_offset.sql  select_ordered_l2_txs_page_from_offset.sql  select_safe_inputs_range.sql  select_user_op_count_for_frame.sql
sequencer/tests/: e2e_sequencer.rs  ws_broadcaster.rs
