[package]
name = "sequencer"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true

[dependencies]
app-core = { path = "../app-core" }
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "sync", "time", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6.8", features = ["trace"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
rusqlite_migration = "2.3.0"
alloy-primitives = { version = "1.4.1", features = ["serde", "k256"] }
alloy-sol-types = "1.4.1"
thiserror = "1"
ssz = { package = "ethereum_ssz", version = "0.10" }
ssz_derive = { package = "ethereum_ssz_derive", version = "0.10" }
clap = { version = "4", features = ["derive", "env"] }

[dev-dependencies]
futures-util = "0.3"
tokio-tungstenite = "0.28"
k256 = "0.13.4"
tempfile = "3"
